--- a/stochastic_variational_inference.tex
+++ b/stochastic_variational_inference.tex
@@ -10,152 +10,104 @@
 
 \documentclass{beamer}
 \begin{document}
-\title{Simple Beamer Class}   
-\author{Sascha Frank} 
+\title{Stochastic Variational Inference}   
+\author{Presented By Ryan Cotterell and Frank Ferraro} 
 \date{\today} 
 
 \frame{\titlepage} 
 
-\frame{\frametitle{Table of contents}\tableofcontents} 
+%\frame{\frametitle{Table of contents}\tableofcontents} 
 
+\input{overview}
 
-\section{Variational Inference } 
-\frame{\frametitle{Overview of Variational Inference}
-  \begin{itemize}
-    \item Turns a complicated inference problems into an optimization problem
-    \item Minimizes the KL divergence from the variational distribution to the posterior
-      distribution
-    \item EM is a special case
-  \end{itemize}
-}
+\input{general-model}
 
-\frame{\frametitle{Model Image}
-put fig 2 here
+\input{elbo}
 
-give gloss of variables: relate them to the input/output/nuissance ones Jason defines
-}
-
-\frame{\frametitle{Evidence Lower Bound (ELBO)}
-  \begin{itemize}
-    \item Key insight is the use of Jensen's inequality
-    \item We choose $q$ from some family of distributions $\mathcal{Q}$
-  \end{itemize}
-
-  \begin{eqnarray*} %% Do avoid eqnarray if possible.
-    \log(p(x \mid \alpha)) & = & \log \int p(x,z,\beta \mid \alpha) dz \ d\beta \\
-    \uncover<2->{& = & \log \int p(x,z,\beta \mid \alpha) \frac{q(z,\beta)}{q(z,\beta)} dz d\beta \\}
-    \uncover<3->{& = & \log\left(\mathbb{E}_q \left[ \frac{p(x,z,\beta \mid \alpha)}{q(z,\beta)} \right] \right) \\}
-    \uncover<4->{& \geq & \mathbb{E}_q \left[ \log p(x,z,\beta \mid \alpha)\right] - \mathbb{E}_q \left[ q(z,\beta) \right] \\}
-    \uncover<5->{& = & \mathcal{L}(q)}
-  \end{eqnarray*}
-}
-
-\frame{\frametitle{Why does maximizes the ELBO minimize the KL-Divergence?} 
-  \begin{eqnarray*} %% Do avoid eqnarray if possible.
-    \text{KL}(q(z,\beta)||p(z,\beta|x) &=& \mathbb{E}_q \left[ \log(q(z,\beta) \right] - \mathbb{E}_q 
-\left[ \log p(z,\beta|x) \right] \\
-    & = & \mathbb{E}_q \left[ \log(q(z,\beta) \right] - \mathbb{E}_q 
-\left[ \log p(z,\beta,x) \right] + \log p(x) \\
-    & = & -\mathcal{L}(q) + const.
-    \end{eqnarray*}
-    
-    \begin{itemize}
-      \item Maximizing $\mathcal{L}(q)$ is just minimizing $-\mathcal{L}(q)$
-    \end{itemize}
-
-}
+\input{why-elbo}
 
 \input{em-special-case} 
 
-\frame{\frametitle{Variational + $x,\; \forall x$}
-  \begin{itemize}
-    \item Variational EM - the process described above
-    \item Variational Bayes - approximate inference (no M-step)
-    \item Variational Decoding - approximation decoding 
-      
-  \end{itemize}
+\input{variational-variants}
 
-}
-
-
-\section{Section no. 2} 
-\subsection{Lists I}
-\frame{\frametitle{unnumbered lists}
-\begin{itemize}
-\item Introduction to  \LaTeX  
-\item Course 2 
-\item Termpapers and presentations with \LaTeX 
-\item Beamer class
-\end{itemize} 
-}
-
-\frame{\frametitle{lists with pause}
-\begin{itemize}
-\item Introduction to  \LaTeX \pause 
-\item Course 2 \pause 
-\item Termpapers and presentations with \LaTeX \pause 
-\item Beamer class
-\end{itemize} 
-}
-
-\subsection{Lists II}
-\frame{\frametitle{numbered lists}
-\begin{enumerate}
-\item Introduction to  \LaTeX  
-\item Course 2 
-\item Termpapers and presentations with \LaTeX 
-\item Beamer class
-\end{enumerate}
-}
-\frame{\frametitle{numbered lists with pause}
-\begin{enumerate}
-\item Introduction to  \LaTeX \pause 
-\item Course 2 \pause 
-\item Termpapers and presentations with \LaTeX \pause 
-\item Beamer class
-\end{enumerate}
-}
-
-\section{Section no.3} 
-\subsection{Tables}
-\frame{\frametitle{Tables}
-\begin{tabular}{|c|c|c|}
-\hline
-\textbf{Date} & \textbf{Instructor} & \textbf{Title} \\
-\hline
-WS 04/05 & Sascha Frank & First steps with  \LaTeX  \\
-\hline
-SS 05 & Sascha Frank & \LaTeX \ Course serial \\
-\hline
-\end{tabular}}
-
-
-\frame{\frametitle{Tables with pause}
-\begin{tabular}{c c c}
-A & B & C \\ 
-\pause 
-1 & 2 & 3 \\  
-\pause 
-A & B & C \\ 
-\end{tabular} }
-
-
-\section{Section no. 4}
-\subsection{blocs}
-\frame{\frametitle{blocs}
-
-\begin{block}{title of the bloc}
-bloc text
-\end{block}
-
-\begin{exampleblock}{title of the bloc}
-bloc text
-\end{exampleblock}
-
-
-\begin{alertblock}{title of the bloc}
-bloc text
-\end{alertblock}
-}
+%\section{Section no. 2} 
+%\subsection{Lists I}
+%\frame{\frametitle{unnumbered lists}
+%\begin{itemize}
+%\item Introduction to  \LaTeX  
+%\item Course 2 
+%\item Termpapers and presentations with \LaTeX 
+%\item Beamer class
+%\end{itemize} 
+%}
+%
+%\frame{\frametitle{lists with pause}
+%\begin{itemize}
+%\item Introduction to  \LaTeX \pause 
+%\item Course 2 \pause 
+%\item Termpapers and presentations with \LaTeX \pause 
+%\item Beamer class
+%\end{itemize} 
+%}
+%
+%\subsection{Lists II}
+%\frame{\frametitle{numbered lists}
+%\begin{enumerate}
+%\item Introduction to  \LaTeX  
+%\item Course 2 
+%\item Termpapers and presentations with \LaTeX 
+%\item Beamer class
+%\end{enumerate}
+%}
+%\frame{\frametitle{numbered lists with pause}
+%\begin{enumerate}
+%\item Introduction to  \LaTeX \pause 
+%\item Course 2 \pause 
+%\item Termpapers and presentations with \LaTeX \pause 
+%\item Beamer class
+%\end{enumerate}
+%}
+%
+%\section{Section no.3} 
+%\subsection{Tables}
+%\frame{\frametitle{Tables}
+%\begin{tabular}{|c|c|c|}
+%\hline
+%\textbf{Date} & \textbf{Instructor} & \textbf{Title} \\
+%\hline
+%WS 04/05 & Sascha Frank & First steps with  \LaTeX  \\
+%\hline
+%SS 05 & Sascha Frank & \LaTeX \ Course serial \\
+%\hline
+%\end{tabular}}
+%
+%
+%\frame{\frametitle{Tables with pause}
+%\begin{tabular}{c c c}
+%A & B & C \\ 
+%\pause 
+%1 & 2 & 3 \\  
+%\pause 
+%A & B & C \\ 
+%\end{tabular} }
+%
+%
+%\section{Section no. 4}
+%\subsection{blocs}
+%\frame{\frametitle{blocs}
+%
+%\begin{block}{title of the bloc}
+%bloc text
+%\end{block}
+%
+%\begin{exampleblock}{title of the bloc}
+%bloc text
+%\end{exampleblock}
+%
+%
+%\begin{alertblock}{title of the bloc}
+%bloc text
+%\end{alertblock}
+%}
 \end{document}
 
