added fig 2 to slides

--- a/general-model.tex
+++ b/general-model.tex
@@ -1,5 +1,17 @@
 \frame{\frametitle{Model Image}
-put fig 2 here
+\begin{figure}
+	\centering
+   \includegraphics[scale=.25]{figs/fig2-model}
+\end{figure}
 
-give gloss of variables: relate them to the input/output/nuissance ones Jason defines
+\begin{table}
+\begin{tabular}{cccc}
+\textbf{Variable (Hoffman)} & \textbf{Known?} & \textbf{Variable (Jason)} & \textbf{Examples}\\
+$x_n$ & observed & input & examples\\
+$z_n$ & latent & & ??\\
+$\beta$ & latent & nuissance & ??\\
+$\alpha$ & either & d& d\\
+\end{tabular}
+\end{table}
+%give gloss of variables: relate them to the input/output/nuissance ones Jason defines
 }
