added initial bit about natural gradient

--- a/em-vs-vi.tex
+++ b/em-vs-vi.tex
@@ -1,3 +1,14 @@
 \frame{\frametitle{EM vs. Variational Inference}
- Online Variational Inference 4 picture Algorithm Comparison
+\begin{table}
+\begin{tabular}{cc}
+   \includegraphics[scale=.15]{figs/batch-em}
+&
+   \includegraphics[scale=.15]{figs/step-em}
+ \\
+%%%%%%%%%%%%%%%%%
+   \includegraphics[scale=.2]{figs/fig3-vi}
+&
+   \includegraphics[scale=.2]{figs/fig4-svi}
+\end{tabular}
+\end{table}
 }
