--- a/stochastic_variational_inference.tex
+++ b/stochastic_variational_inference.tex
@@ -9,6 +9,7 @@
 
 
 \documentclass{beamer}
+\usepackage{multirow,multicol}
 \begin{document}
 \title{Stochastic Variational Inference}   
 \author{Presented By Ryan Cotterell and Frank Ferraro} 
