--- a/stochastic_variational_inference.tex
+++ b/stochastic_variational_inference.tex
@@ -10,7 +10,7 @@
 
 \documentclass{beamer}
 \usepackage{multirow,multicol}
-\usepackage{color}
+\usepackage{xcolor}
 \makeatletter
 \newcommand{\redub}{}
 \def\redub#1{%
@@ -25,6 +25,9 @@
     \color{currentcolor}%
 }
 \makeatother
+
+\newcommand{\gvp}[1]{\colorbox{red}{\ensuremath{#1}}}
+\newcommand{\lvp}[1]{\colorbox{blue}{\ensuremath{#1}}}
 
 \begin{document}
 \title{Stochastic Variational Inference}   
@@ -52,84 +55,5 @@
 
 \input{variational-variants}
 
-%\section{Section no. 2} 
-%\subsection{Lists I}
-%\frame{\frametitle{unnumbered lists}
-%\begin{itemize}
-%\item Introduction to  \LaTeX  
-%\item Course 2 
-%\item Termpapers and presentations with \LaTeX 
-%\item Beamer class
-%\end{itemize} 
-%}
-%
-%\frame{\frametitle{lists with pause}
-%\begin{itemize}
-%\item Introduction to  \LaTeX \pause 
-%\item Course 2 \pause 
-%\item Termpapers and presentations with \LaTeX \pause 
-%\item Beamer class
-%\end{itemize} 
-%}
-%
-%\subsection{Lists II}
-%\frame{\frametitle{numbered lists}
-%\begin{enumerate}
-%\item Introduction to  \LaTeX  
-%\item Course 2 
-%\item Termpapers and presentations with \LaTeX 
-%\item Beamer class
-%\end{enumerate}
-%}
-%\frame{\frametitle{numbered lists with pause}
-%\begin{enumerate}
-%\item Introduction to  \LaTeX \pause 
-%\item Course 2 \pause 
-%\item Termpapers and presentations with \LaTeX \pause 
-%\item Beamer class
-%\end{enumerate}
-%}
-%
-%\section{Section no.3} 
-%\subsection{Tables}
-%\frame{\frametitle{Tables}
-%\begin{tabular}{|c|c|c|}
-%\hline
-%\textbf{Date} & \textbf{Instructor} & \textbf{Title} \\
-%\hline
-%WS 04/05 & Sascha Frank & First steps with  \LaTeX  \\
-%\hline
-%SS 05 & Sascha Frank & \LaTeX \ Course serial \\
-%\hline
-%\end{tabular}}
-%
-%
-%\frame{\frametitle{Tables with pause}
-%\begin{tabular}{c c c}
-%A & B & C \\ 
-%\pause 
-%1 & 2 & 3 \\  
-%\pause 
-%A & B & C \\ 
-%\end{tabular} }
-%
-%
-%\section{Section no. 4}
-%\subsection{blocs}
-%\frame{\frametitle{blocs}
-%
-%\begin{block}{title of the bloc}
-%bloc text
-%\end{block}
-%
-%\begin{exampleblock}{title of the bloc}
-%bloc text
-%\end{exampleblock}
-%
-%
-%\begin{alertblock}{title of the bloc}
-%bloc text
-%\end{alertblock}
-%}
 \end{document}
 
