added mean field

--- a/stochastic_variational_inference.tex
+++ b/stochastic_variational_inference.tex
@@ -47,11 +47,15 @@
 
 \input{why-elbo}
 
+\input{exponential-families}
+
+\input{mean-field}
+
+\input{em-special-case} 
+
 \input{natural-gradient}
 
 \input{em-vs-vi}
-
-\input{em-special-case} 
 
 \input{variational-variants}
 
