--- a/stochastic_variational_inference.tex
+++ b/stochastic_variational_inference.tex
@@ -26,8 +26,8 @@
 }
 \makeatother
 
-\newcommand{\gvp}[1]{\colorbox{red}{\ensuremath{#1}}}
-\newcommand{\lvp}[1]{\colorbox{blue}{\ensuremath{#1}}}
+\newcommand{\gvp}[1]{\textcolor{red}{\ensuremath{#1}}}
+\newcommand{\lvp}[1]{\textcolor{blue}{\ensuremath{#1}}}
 
 \begin{document}
 \title{Stochastic Variational Inference}   
