--- a/em-special-case.tex
+++ b/em-special-case.tex
@@ -2,7 +2,7 @@
   \begin{itemize}
     \item How do we choose $\mathcal{Q}$?
     \item We want it to be easily computable!
-    \item What if $p(z,\beta|x) \in \mathcal{Q}$? 
+    \item What if $p(z,\theta |x) \in \mathcal{Q}$? 
     \item Then computing expectations under $q$ is just inference
       in our model!
     \item Consider a standard HMM, our E-step involves direct computation of the marginals through Forward-Backwards
